--- a/StarkSparkService/src/main/resources/bootstrap.properties
+++ b/StarkSparkService/src/main/resources/bootstrap.properties
@@ -1,1 +1,16 @@
+spring.main.web-application-type=reactive
+server.port=8010
 spring.application.name=StarkSparkService
+spring.security.enabled=false
+spring.cloud.nacos.config.bootstrap.enable=true
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.cloud.nacos.discovery.namespace=StarkSparkService
+spring.cloud.nacos.config.file-extension=properties
+spring.cloud.nacos.config.shared-configs[0].data-id=StarkSparkService-prod.properties
+spring.cloud.nacos.config.shared-configs[0].refresh=true
+spring.cloud.nacos.config.refresh-enabled=true
+
+
+
+
+
