--- a/StarkSparkService/src/main/resources/bootstrap.properties
+++ b/StarkSparkService/src/main/resources/bootstrap.properties
@@ -10,6 +10,8 @@ spring.cloud.nacos.config.shared-configs[0].data-id=StarkSparkService-prod.prope
 spring.cloud.nacos.config.shared-configs[0].refresh=true
 spring.cloud.nacos.config.refresh-enabled=true
 
+logging.level.org.springframework=DEBUG
+logging.level.org.example=DEBUG
 
 
 
