--- a/Talker/src/main/resources/bootstrap.properties
+++ b/Talker/src/main/resources/bootstrap.properties
@@ -2,6 +2,7 @@ server.port=8001
 spring.main.web-application-type=reactive
 spring.application.name=Talker
 spring.security.enabled=false
+spring.main.allow-bean-definition-overriding=true
 spring.cloud.nacos.config.bootstrap.enable=true
 spring.cloud.nacos.discovery.server-addr=localhost:8848
 spring.cloud.nacos.config.file-extension=properties
