--- a/EurekaServer/pom.xml
+++ b/EurekaServer/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>GetWay</artifactId>
+    <artifactId>EurekaServer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -23,11 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,4 +52,4 @@
             </plugin>
         </plugins>
     </build>
-</project>
+</project> 
