--- a/Talker/pom.xml
+++ b/Talker/pom.xml
@@ -182,7 +182,10 @@
             <scope>import</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
     </dependencies>
 
