--- a/PayOff/src/main/resources/application.properties
+++ b/PayOff/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=PayOff
 server.port=8011
 
-# MySQL ?????
+# MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/humphrey?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ????????
+# Connection Pool Configuration
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=5
 spring.datasource.tomcat.initial-size=10
 
-# Nacos ??
+# Nacos Configuration
 spring.cloud.nacos.config.server-addr=localhost:8848
 spring.cloud.nacos.config.namespace=public
 spring.cloud.nacos.config.group=DEFAULT_GROUP
